# cpp-lab

alg-implementations/: README.md
alg-implementations/dynamic_array/: dynamic_array.c
alg-implementations/list/: digits.cpp  dl_list.c  list.c  mid-delete.cpp
alg-implementations/max_subarray/: main.cpp
alg-implementations/tree/: tree.c
gtest/: CMakeLists.txt  gtest.cpp
